# brain-agriculture

./: .env  .env.prod  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  run.sh
nginx/: nginx.conf
scripts/: run.sh
src/: db.sqlite3
src/apps/agriculture/: apps.py  models.py
src/apps/agriculture/api/: serializers.py  urls.py  views.py
src/apps/agriculture/fixtures/: PlantedCropsModel.json
src/apps/agriculture/migrations/: 0001_initial.py  0002_alter_agriculturemodel_city_id.py
src/apps/region/: apps.py  models.py
src/apps/region/api/: serializers.py  urls.py  views.py
src/apps/region/fixtures/: CityModel.json  CountryModel.json  StateModel.json
src/apps/region/migrations/: 0001_initial.py
src/apps/user/: models.py
src/apps/user/api/: serializers.py  urls.py  views.py
src/apps/user/management/commands/: wait_for_db.py
src/apps/user/migrations/: 0001_initial.py  0002_usermodel_usr_password.py  0003_remove_usermodel_usr_password.py
src/config/: asgi.py  settings.py  urls.py  wsgi.py
src/data/initial_sql/: city.sql  country.sql  state.sql
src/utils/validate_fields/: validate_cpf_cnpj.py
